[package]
name = "ncpv"
version = "0.1.0"
edition = "2021"
description = "NCurses Pipe Viewer"
license = "MIT"

[dependencies]
chrono = "0.4.38"
crossterm = "0.27.0"
getopts = "0.2.21"
nix = { version = "0.29.0", features = ["fs"] }
ratatui = "0.26.3"

[package.metadata.rpm]
package = "ncpv"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ncpv = { path = "/usr/bin/ncpv" }

[profile.release]
codegen-units = 1
strip = true
panic = 'abort'
opt-level = 'z'
lto = true
